--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/progettosiw
+spring.datasource.url=jdbc:postgresql://192.168.1.94:5432/progettosiw
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.sqlScriptEncoding=UTF-8
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #==================================
 # = Web server
