--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
   			<artifactId>joda-time</artifactId>
   			<version>2.12.5</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.thymeleaf.extras</groupId>
+    		<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+    		<version>3.0.5.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
